# activitywatch

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  SECURITY.md  TODO.md  docker-compose.yml
activitywatch/: aw.spec
activitywatch/aw-server-rust/: Cargo.toml  Dockerfile
aw-api/: Dockerfile  requirements.txt
aw-api/app/: main.py.example
aw-lib/: README.md
aw-lib/core/: README.md
aw-query/: Dockerfile  requirements.txt
aw-server/: README.md
aw-server/api/: Cargo.toml  Dockerfile
aw-server/api/aw-datastore/: Cargo.toml  build.rs
aw-server/api/aw-datastore/migrations/: 20240102000000_api_keys.sql
aw-server/api/aw-datastore/src/: api_key_helpers.rs  postgres_helpers.rs
aw-server/db/: Dockerfile  init-db.sql
aw-server/query/: Cargo.toml
aw-server/sync/: README.md
aw-server/webui/: Dockerfile  nginx.conf  vue.config.js
aw-watchers/: README.md
deployment-docs/: QUICK_START.md  README.md  check-heartbeats.sh  remote-watcher-setup.md  restart-watcher.sh  security-setup.md  server-info.md
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md
docs/deployment/: QUICK_START.md  README.md  remote-watcher-setup.md  security-setup.md  verify-connection.sh
scripts/: README.md  insert-fake-data.sql  test-docker.sh  validate-docker.sh
tests/: README.md  TESTING_API_KEYS.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.sh
tests/api/: test_api.py  test_api_concurrency.py  test_api_edge_cases.py  test_api_keys.py  test_api_performance.py
tests/database/: __init__.py  (+4 more)
(+42 files in other folders)
