[package]
name = "aw-datastore"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>"]
edition = "2021"


[dependencies]
appdirs = "0.2"
home = "=0.5.5"  # Pin to version compatible with Rust 1.85
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "migrate"] }
tokio = { version = "1.35", features = ["full"] }
mpsc_requests = "0.3"
log = "0.4"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"

aw-models = { path = "../aw-models" }
aw-transform = { path = "../aw-transform" }

[features]
default = []
